--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <ul>
               <li v-for="detail in details">{{ detail }}</li>
             </ul>
-            <div v-for="variant in variants" :key="variant.id">{{ variant.color }}</div>
             <ul>
-              <li v-for="size in sizes">{{ size }}</li>
+              <li v-for="(size, index) in sizes" :key="index">{{ size }}</li>
             </ul>
+            <div v-for="variant in variants" :key="variant.id">{{ variant.color }}</div>
           </div>
         </div>
       </div>
